--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ main{
 }
 
 .btn{
+    cursor: pointer;
     width: 30px;
 }
 
@@ -111,6 +112,7 @@ main{
     background-color: rgb(63, 63, 63);
     box-shadow: 3px 3px 10px black;
     transition: 250ms;
+    cursor: pointer;
 }
 
 .it_list:hover{
